docs: bump README to  [skip ci]

--- a/.github/workflows/esoui-upload.yml
+++ b/.github/workflows/esoui-upload.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'LICENSE'
+      - 'README.md'
+      - 'CHANGELOG.md'
+      - '.github/**'
+      - '*.md'
 
 jobs:
   upload:
